[metadata]
name = pyunionfind
version = 1.0.0
author = Debajyoti Nandi, Hagai Helman Tov
maintainer = Hagai Helman Tov
maintainer_email = hagai.helman@gmail.com
description = A union-find disjoint sets data structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hagai-helman/unionfind
license='MIT',
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics

[options]
py_modules = 
	unionfind
